--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,8 @@ set(SOURCE_FILES
         state/main_menu_state.h
         state/setting_state.cpp
         state/setting_state.h
-        state/HelpState.cpp state/HelpState.h)
+        state/help_state.cpp
+        state/help_state.h)
 
 add_executable(pzero ${SOURCE_FILES})
 target_include_directories(pzero PUBLIC .)
