Newest character version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,12 +20,12 @@ set(SOURCE_FILES
         state/main_menu_state.cpp
         state/main_menu_state.h
         state/setting_state.cpp
-        state/game_arena.cpp
-        state/game_arena.h
+        state/ingame_state.cpp
+        state/ingame_state.h
         state/setting_state.h
         state/setting_state.h
         state/state_help.cpp
-        state/state_help.h)
+        state/state_help.h state/animation.cpp state/animation.h state/player.cpp state/player.h state/game_arena_gui.h)
 
 add_executable(pzero ${SOURCE_FILES})
 target_include_directories(pzero PUBLIC .)
